--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
-spring.datasource.url=jdbc:h2:file:C:\JAVA\TODO\YesIts-todo\todo-db
+spring.datasource.url=jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
