--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
- jpa:
-    hibernate:ddl-auto:create
- h2.console:
-    enabled: true
-    path: '/console'
-    datasource:
-      url:jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
+  jpa:
+    hibernate:
+      ddl-auto: create
+  h2:
+    console:
+      enabled: true
+      path: '/console'
+  datasource:
+    url: jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
+my.prop: 'test'
