--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,6 @@ spring:
       path: '/console'
   datasource:
     url: jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
+  main:
+    banner-mode: off
 task.AllowMultipleTasksFromTemplate: false
