--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
     url: jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
   main:
     banner-mode: off
-task.AllowMultipleTasksFromTemplate: false
+task.template.allowMultipleTasks: false
