--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,4 @@
 spring:
   h2:
     console:
-      enabled: true
-      path: '/console'
-  datasource:
-    url: jdbc:h2:file:C:/JAVA/TODO/YesIts-todo/todo-db
-  main:
-    banner-mode: off
-task.template.allowMultipleTasks: false
+      enabled: false
